--- a/css/style.css
+++ b/css/style.css
@@ -1,92 +1,97 @@
 /*GENERAL*/
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.container{
+.container {
   width: 80%;
   max-width: 1200px;
   margin: 0 auto;
   height: 100%;
 }
 
-.container-flex{
+.h-flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 100%;
 }
 
-body{
+body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: 800;
 }
 
 
-i{
+i {
   color: white;
   margin-right: 5px;
 }
 
-header{
+header {
   position: fixed;
   z-index: 999;
   width: 100%;
   background-color: rgb(252, 92, 0);
   height: 60px;
-  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.5) ;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.5);
 }
 
-main{
+main {
   text-align: center;
   margin: 0 auto;
-  padding-top: 120px ;
+  padding-top: 120px;
 }
-a{
+
+a {
   text-decoration: none;
   color: white;
 }
 
-img{
+img {
   max-width: 100%;
   height: 600px;
 }
 
+nav ul li {
+  margin-right: 12px;
+}
+
 /*HEADER*/
 
-nav ul{
+nav ul {
   list-style: none;
   display: flex;
 }
 
-nav ul li{
-  margin-right: 4px ;
-  }
 
-
-.logo img{
-  height: 35px;;
-  }
-
-/*MAIN*/
-.row{
-  width: 80%;
-  margin: 0 auto;
+.logo img {
+  height: 35px;
+  ;
 }
 
-.product{
+/*MAIN*/
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.product {
   position: relative;
   display: inline-block;
   text-align: left;
   padding-bottom: 50px;
   padding-right: 10px;
+  width: calc(100% / 3);
 }
 
 /*TEXT-MAIN*/
-.discount-50{
+.discount-50 {
   background-color: red;
   color: white;
   position: absolute;
@@ -95,7 +100,7 @@ nav ul li{
   bottom: 140px;
 }
 
-.sost{
+.sost {
   background-color: green;
   color: white;
   position: absolute;
@@ -104,7 +109,7 @@ nav ul li{
   bottom: 140px;
 }
 
-.fa-solid.fa-heart{
+.fa-solid.fa-heart {
   position: absolute;
   color: black;
   background-color: white;
@@ -113,19 +118,20 @@ nav ul li{
   right: 0;
   cursor: pointer;
 }
-.fa-solid.fa-heart:hover{
+
+.fa-solid.fa-heart:hover {
   color: red;
 }
 
-.no-bold{
+.no-bold {
   font-weight: 400;
 }
 
-.price-1{
+.price-1 {
   color: red;
 }
 
-.price-2{
+.price-2 {
   color: black;
   text-decoration: line-through;
 }
@@ -133,14 +139,35 @@ nav ul li{
 
 /*FOOTER*/
 
-footer{
+footer {
   height: 100px;
   background-color: black;
   color: white;
 }
 
-.foot{
-  width: 80%;
+.foot {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
+.info h3 {
+  margin-bottom: 10px;
+}
 
+.info a {
+  font-size: 12px;
+  font-weight: 400;
+  margin-right: 5px;
+}
+
+.socialfoot h4 {
+  margin-bottom: 10px;
+
+}
+
+.iconfoot a {
+  margin-right: 3px;
+  font-size: 20px;
+}
