--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
   width: 80%;
   max-width: 1200px;
   margin: 0 auto;
-  height: 100%;
 }
 
 .h-flex {
@@ -53,7 +52,6 @@ a {
 
 img {
   max-width: 100%;
-  height: 600px;
 }
 
 nav ul li {
@@ -70,14 +68,12 @@ nav ul {
 
 .logo img {
   height: 35px;
-  ;
 }
 
 /*MAIN*/
 .row {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   flex-wrap: wrap;
 }
 
@@ -88,7 +84,27 @@ nav ul {
   padding-bottom: 50px;
   padding-right: 10px;
   width: calc(100% / 3);
+  min-width: 250px;
 }
+
+.product .image {
+  position: relative;
+  cursor: pointer;
+}
+
+
+.product .secondary-img {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+}
+
+.product .image:hover .secondary-img {
+  display: block;
+}
+
+
 
 /*TEXT-MAIN*/
 .discount-50 {
